# checkmail-rs

./: .gitignore  Cargo.toml
src/: lib.rs
